Configuración de log4j y jdbc.
Adición de nueva clase DataSourceConfigurator con la capacidad de cargar
y almacenar datos de la conexión JDBC desde un archivo properties, el
cual será recibido como un parámetro de la aplicación.

Eliminación del archivo log4j2.xml del proyecto dado que se cargará como
un parámetro de la aplicación y cargado en el contexto de log4j por
medio de un System Property.

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,17 @@
 	<build>
 		<plugins>
 
+			<!-- Java Compiler -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
 			<!-- JOOQ Codegen -->
 			<plugin>
 				<groupId>org.jooq</groupId>
