--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.robertux.financeAnalytics</groupId>
 	<artifactId>FinanceAnalyticsServer</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.2</version>
 	<packaging>jar</packaging>
 
 	<name>FinanceAnalyticsServer</name>
@@ -67,6 +67,23 @@
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- Bean Validation -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.10.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>6.0.10.Final</version>
 		</dependency>
 	</dependencies>
 
