--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Jasypt -->
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+
 		<!-- Bean Validation -->
 		<dependency>
 			<groupId>javax.validation</groupId>
